# upskill

./: .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  bootstrap  justfile
.githooks/: bootstrap.hooks  commit-msg  commit-msg.hooks  post-commit.hooks  post-commit.off  post-merge.hooks  post-merge.off  pre-commit  pre-commit.hooks  pre-push  pre-push.hooks  prepare-commit-msg.hooks  prepare-commit-msg.off
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
docs/: SUMMARY.md  architecture.md  specification.md  usage.md
src/: agent.rs  auth.rs  fetch.rs  install.rs  lib.rs  lockfile.rs  main.rs  search.rs  source.rs  ui.rs
tests/: cli_add.rs  cli_check.rs  cli_ci_mode.rs  cli_dryrun.rs  cli_exit_codes.rs  cli_gitlab.rs  cli_global.rs  cli_list.rs  cli_lockfile.rs  cli_moddetect.rs  cli_remove.rs  cli_search.rs  cli_update.rs
