[package]
name = "upskill"
version = "0.1.0"
edition = "2024"
description = "Upskill your coding agents — ultra-lightweight agent skills package manager"
license = "MIT"
repository = "https://github.com/driftsys/upskill"
homepage = "https://github.com/driftsys/upskill"
readme = "README.md"
keywords = ["agent", "skills", "cli", "ai", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.14"

[profile.release]
lto = true
strip = true
codegen-units = 1
