[package]
name = "upskill"
version = "0.1.0"
edition = "2024"
description = "Upskill your coding agents — ultra-lightweight agent skills package manager"
license = "MIT"
repository = "https://github.com/driftsys/upskill"
homepage = "https://github.com/driftsys/upskill"
readme = "README.md"
keywords = ["agent", "skills", "cli", "ai", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.4"
serde_json = "1.0.149"
tempfile = "3.14"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
